add -XX:+UseCompactObjectHeaders option
* add logo files
* upate AppManifest.xml